--- a/theusgames/WebContent/style.css
+++ b/theusgames/WebContent/style.css
@@ -38,7 +38,6 @@ img {
 /***************** cabeçalho ********************/
 header {
     height: 160px;
-    /*background-color: #6b6b6b;*/
 }
 
 #logo {
@@ -305,4 +304,55 @@ footer {
 #RedesSocial {
     float: right;
     margin-top: 25px;
+}
+
+#tabela {
+	margin: 50px 0px 0px 0px;
+	border-collapse: collapse;
+}
+
+#tabela th {
+	border: 1px solid #dddddd;
+	padding: 10px;
+	text-aling: left;
+	background-color: #ee0000;
+	color: #ffffff;
+
+}
+
+#tabela td {
+	border: 1px solid #dddddd;
+	padding: 10px
+}
+
+h1 {
+	margin: 30px 0px 15px 0px;
+	color: #000000;
+}
+
+.Botao1 {
+	text-decoration: none;
+	background-color: #ee0000;
+	padding: 5px 10px 5px 10px;
+	color: #fff;
+	font-size: 1.2em;	
+	border-radius: 5px;	
+}
+
+#formulario {
+	padding: 20px 0px 50px 0px;
+	
+}
+
+#formulario h1 {
+	color: #ee0000;
+	margin-bottom: 30px;
+}
+
+#formulario input[type="text"] {
+	width: 320px;
+	padding: 5px;
+	margin-bottom: 10px;
+	border: 1px solid #ee0000;
+	border-radius: 5px;
 }
